third_party/rust/cxx/v1/crate/tests/ui/enum_receiver.stderr
error: unsupported receiver type; C++ does not allow member functions on enums
 --> $DIR/enum_receiver.rs:7:20
  |
7 |         fn f(self: &Enum);
  |                    ^^^^^
